--- a/.github/workflows/validate-dev.yml
+++ b/.github/workflows/validate-dev.yml
@@ -1,33 +1,14 @@
-name: Deploy Infra - Main
+name: Validate Terraform - PR Check
 
 on:
-  push:
+  pull_request:
     branches: [main]
 
 jobs:
-  deploy:
+  validate:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      - name: 🗂️ Crear carpeta artifacts
-        run: mkdir -p artifacts/dev
-
-      - name: 📦 Crear zip Lambda
-        run: |
-          cd lambda
-          npm ci
-          zip -r ../artifacts/dev/lambda_function.zip index.js node_modules
-
-      - name: 📦 Crear zip Layer
-        run: |
-          cd layers/aws-sdk
-          npm ci --prefix nodejs
-          cd ../..
-          zip -r artifacts/dev/aws_sdk_layer.zip layers/aws-sdk/nodejs
 
       - name: ☁️ Setup Terraform
         uses: hashicorp/setup-terraform@v2
@@ -41,8 +22,12 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - name: 🚀 Terraform Apply
-        run: terraform apply -auto-approve
+      - name: ✅ Terraform Validate
+        run: terraform validate
+        working-directory: infra/environments/dev
+
+      - name: 🧪 Terraform Plan
+        run: terraform plan
         working-directory: infra/environments/dev
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
