--- a/.github/workflows/validate-dev.yml
+++ b/.github/workflows/validate-dev.yml
@@ -22,6 +22,20 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
+      - name: 📦 Crear zip Layer
+        run: |
+          mkdir -p artifacts/dev
+          cd layers/aws-sdk
+          npm ci --prefix nodejs
+          cd ../..
+          zip -r artifacts/dev/aws_sdk_layer.zip layers/aws-sdk/nodejs
+
+      - name: 📦 Crear zip Lambda
+        run: |
+          cd lambda
+          npm ci
+          zip -r artifacts/dev/lambda_function.zip index.js node_modules
+
       - name: ✅ Terraform Validate
         run: terraform validate
         working-directory: infra/environments/dev
