--- a/.github/workflows/validate-dev.yml
+++ b/.github/workflows/validate-dev.yml
@@ -22,6 +22,9 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
+      - name: 🗂️ Crear carpeta artifacts
+        run: mkdir -p artifacts/dev
+
       - name: 📦 Crear zip Layer
         run: |
           mkdir -p artifacts/dev
