--- a/layers/aws-sdk/nodejs/package.json
+++ b/layers/aws-sdk/nodejs/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1692.0"
+    "aws-sdk": "^2.1692.0",
+    "pg": "^8.14.1"
   },
   "description": ""
 }
