--- a/.github/workflows/validate-dev.yml
+++ b/.github/workflows/validate-dev.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           cd lambda
           npm ci
-          zip -r ../artifacts/dev/lambda_function.zip index.js node_modules
+          zip -r ../artifacts/dev/lambda_function.zip index.js
 
       - name: ✅ Terraform Validate
         run: terraform validate
